tests/ui/imports/import-loop-2.stderr
error[E0432]: unresolved import `b`
  --> $DIR/import-loop-2.rs:4:13
   |
LL |     pub use b::x;
   |             ^ help: a similar path exists: `crate::b`
   |
   = note: `use` statements changed in Rust 2018; read more at <https://doc.rust-lang.org/edition-guide/rust-2018/module-system/path-clarity.html>

error[E0432]: unresolved import `a`
  --> $DIR/import-loop-2.rs:8:13
   |
LL |     pub use a::x;
   |             ^ help: a similar path exists: `crate::a`
   |
   = note: `use` statements changed in Rust 2018; read more at <https://doc.rust-lang.org/edition-guide/rust-2018/module-system/path-clarity.html>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
